@@ -3,7 +3,7 @@
   "dependencies": {
     "jquery": "2.1.4",
     "requirejs": "2.1.20",
-    "bcviz": "git://github.com/wtsi-npg/bcviz.git#1.3.0",
+    "bcviz": "git://github.com/wtsi-npg/bcviz.git#1.3.1",
     "jquery-unveil" : "git://github.com/wtsi-npg/unveil#1.3.0",
     "table-export" : "git://github.com/hhurz/tableExport.jquery.plugin.git#v1.2.2"
   },
